// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoxedRefreshIndicator Should match all-properties snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      Object {
        "backgroundColor": "#FFFFFF",
      },
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    testID="LoadingSpinnerTestID"
  >
    <View
      collapsable={false}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              Array [
                "strokeWidth",
              ]
            }
            strokeWidth={3}
          >
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 22.5 12"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 22.5 12 A 10.5 10.5 0 0 1 1.5 12"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 1.5 11.25"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                Object {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
  <Text>
    This is the caption
  </Text>
  <Text>
    This is the action
  </Text>
</View>
`;

exports[`BoxedRefreshIndicator Should match base snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 100,
        "justifyContent": "center",
      },
      undefined,
    ]
  }
>
  <View
    accessibilityRole="progressbar"
    accessible={true}
    importantForAccessibility="no-hide-descendants"
    style={
      Object {
        "height": 24,
        "width": 24,
      }
    }
    testID="LoadingSpinnerTestID"
  >
    <View
      collapsable={false}
      style={
        Object {
          "transform": Array [
            Object {
              "rotateZ": "0deg",
            },
          ],
        }
      }
      testID="LoadingSpinnerAnimatedTestID"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={24}
        bbWidth={24}
        fill="none"
        focusable={false}
        height={24}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 24,
              "width": 24,
            },
          ]
        }
        vbHeight={24}
        vbWidth={24}
        width={24}
      >
        <RNSVGGroup
          fill={null}
          propList={
            Array [
              "fill",
            ]
          }
        >
          <RNSVGDefs>
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  736995,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-secondHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
            <RNSVGLinearGradient
              gradient={
                Array [
                  0,
                  -16040221,
                  1,
                  -16040221,
                ]
              }
              gradientTransform={null}
              gradientUnits={0}
              name="spinner-firstHalf"
              x1="0%"
              x2="100%"
              y1="0%"
              y2="0%"
            />
          </RNSVGDefs>
          <RNSVGGroup
            fill={
              Object {
                "payload": 4278190080,
                "type": 0,
              }
            }
            propList={
              Array [
                "strokeWidth",
              ]
            }
            strokeWidth={3}
          >
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 22.5 12"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-secondHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 22.5 12 A 10.5 10.5 0 0 1 1.5 12"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                ]
              }
              stroke={
                Object {
                  "brushRef": "spinner-firstHalf",
                  "type": 1,
                }
              }
            />
            <RNSVGPath
              d="M 1.5 12 A 10.5 10.5 0 0 1 1.5 11.25"
              fill={
                Object {
                  "payload": 4278190080,
                  "type": 0,
                }
              }
              propList={
                Array [
                  "stroke",
                  "strokeLinecap",
                ]
              }
              stroke={
                Object {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              strokeLinecap={1}
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
  </View>
</View>
`;
